@@ -1155,7 +1155,9 @@ $wgMessageStructure = array(
 		'unprotectcomment',
 		'protect-unchain',
 		'protect-text',
-		'protect-viewtext',
+		'protect-locked-blocked',
+		'protect-locked-dblock',
+		'protect-locked-access',
 		'protect-cascadeon',
 		'protect-default',
 		'protect-level-autoconfirmed',
